# platform.upstream.elementary

./: .gbs.conf  0001-elm_config-Add-feature-to-set-depth-stencil-msaa-bit.patch  AUTHORS  COPYING  Makefile.in  Makefile_Elm_Helpers.am  NEWS  aclocal.m4  configure  configure.ac  elementary-1.7.1.tar.gz.delta  elementary-1.7.1.tar.gz.id  elementary-1.7.2.tar.bz2.delta  elementary-1.7.2.tar.bz2.id  elementary-1.7.3.tar.bz2.delta  elementary-1.7.3.tar.bz2.id  elementary-1.7.4.tar.bz2.delta  elementary-1.7.4.tar.bz2.id  elementary-1.7.5.tar.bz2.delta  elementary-1.7.5.tar.bz2.id  elementary-1.7.8.tar.gz.delta  elementary-1.7.8.tar.gz.id  elementary.spec  elementary_config.h.in  project.config
config/: Makefile.in
config/default/: Makefile.in  base.src.in
config/mobile/: Makefile.in  base.src  (+1 more)
data/: Makefile.am  Makefile.in
data/desktop/: Makefile.in
data/edje_externals/: Makefile.in
data/images/: Makefile.in
data/objects/: Makefile.in
data/themes/: Makefile.in
data/themes/edc/: border.edc  comp.edc
data/themes/edc/elm/: border.edc  button.edc  scroller.edc  spinner.edc
doc/: Makefile.in
packaging/: elementary.changes  elementary.conf  elementary.manifest  elementary.spec
pkgbuild/: PKGBUILD
po/: LINGUAS  POTFILES.in  ar.gmo  ar.po  as.po  az.po  az_IR.gmo  az_IR.po  bg.po  bn.po  bn_BD.po  ca.gmo  ca.po  ckb_IQ.po  cs.gmo  cs.po  da.po  de.gmo  de.po  el.gmo  el.po  el_GR.po  elementary.pot  en.po  en_PH.po  en_US.mo  en_US.po  eo.gmo  eo.po  es.gmo  es.po  es_ES.po  es_US.po  et.po  eu.po  fa.gmo  fa.po  fi.po  fr.gmo  fr.po  (+75 more)
src/: Makefile.in
(+240 files in other folders)
